cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(pamworkspace VERSION 1.8.0)

include(addexternal.cmake)

set(CMAKE_INSTALL_PREFIX "/usr/local")

SET(NMOS OFF CACHE BOOL "set to ON to include NMOS")

message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
message(STATUS "NMOS: ${NMOS}")

SET(DIR_PAM $ENV{HOME}/pam CACHE STRING "location for pam config files etc")
SET(DIR_BASE ${CMAKE_SOURCE_DIR} CACHE STRING "base location for external libraries' source")
SET(DIR_NMOS ${DIR_BASE}/external/nmos CACHE STRING "location of nmos")
SET(DIR_PTPMONKEY ${DIR_BASE}/external/ptpmonkey CACHE STRING "location of ptpmonkey")
SET(DIR_SAPSERVER ${DIR_BASE}/external/sapserver CACHE STRING "location of sapserver")
SET(DIR_LIVEWIRE ${DIR_BASE}/external/livewirediscover CACHE STRING "location of livewire watcher")
SET(DIR_LOG ${DIR_BASE}/external/log CACHE STRING "location of pml log")
SET(DIR_DNSSD ${DIR_BASE}/external/dnssd CACHE STRING "location of pml dnssd")
SET(DIR_RESTGOOSE ${DIR_BASE}/external/restgoose CACHE STRING "location of Restgoose")
SET(RESTGOOSE_BRANCH "main" CACHE STRING "Restgoose branch to use")
SET(DIR_JSON ${DIR_BASE}/external/jsoncpp CACHE STRING "location of jsoncpp")

#set the following to off so we build them rather than one of the sub projects
SET(BUILD_DNSSD OFF)
SET(BUILD_LOG OFF)


message(STATUS "Find external libraries")

add_external_library(jsoncpp ${DIR_JSON} "https://github.com/open-source-parsers/jsoncpp" "" FALSE)
if(EXISTS ${DIR_JSON}/amalgamate.py)
	message(STATUS "Generating jsoncpp amalgamated source files")
	execute_process(COMMAND python3 amalgamate.py WORKING_DIRECTORY ${DIR_JSON})
endif()

add_external_library(log ${DIR_LOG} "https://github.com/martim01/log.git" "" TRUE)
add_external_library(ptpmonkey ${DIR_PTPMONKEY} "https://github.com/martim01/ptpmonkey.git" "" TRUE)
add_external_library(restgoose ${DIR_RESTGOOSE} "https://github.com/martim01/restgoose.git" "origin/main" TRUE)

add_external_library(sapserver ${DIR_SAPSERVER} "https://github.com/martim01/sapserver.git" "" TRUE)
add_external_library(livewire ${DIR_LIVEWIRE} "https://github.com/martim01/livewirediscover.git"  "" TRUE)
add_external_library(dnssd ${DIR_DNSSD} "https://github.com/martim01/dnssd.git"  "" TRUE)

if(${NMOS})
    add_external_library(nmos ${DIR_NMOS} "https://github.com/martim01/nmos.git"  "" TRUE)

endif()

include_directories(${DIR_LOG}/include)
include_directories(${DIR_RESTGOOSE}/include)

configure_file(pam2_paths.h.in ${CMAKE_BINARY_DIR}/include/pam2_paths.h @ONLY)

message(STATUS "Configure pambase")
add_subdirectory(pambase)
message(STATUS "Configure pamfft")
add_subdirectory(pamfft)
message(STATUS "Configure pamlevel")
add_subdirectory(pamlevel)
message(STATUS "Configure plugin anglemeters")
add_subdirectory(plugins/anglemeters)
message(STATUS "Configure plugin aoip")
add_subdirectory(plugins/aoip\ info)
message(STATUS "Configure plugin channeldelay")
add_subdirectory(plugins/channel\ delay)
message(STATUS "Configure plugin distortion")
add_subdirectory(plugins/distortion)
message(STATUS "Configure plugin fft")
add_subdirectory(plugins/fft)
message(STATUS "Configure plugin fftphase")
add_subdirectory(plugins/fftphase)
message(STATUS "Configure plugin identify")
add_subdirectory(plugins/identify)
message(STATUS "Configure plugin inputalign")
add_subdirectory(plugins/InputAlign)
message(STATUS "Configure plugin levels")
add_subdirectory(plugins/levels)
message(STATUS "Configure plugin lineup")
add_subdirectory(plugins/lineup)
message(STATUS "Configure plugin lissajou")
add_subdirectory(plugins/lissajou)
message(STATUS "Configure plugin LTC")
add_subdirectory(plugins/LTC)
message(STATUS "Configure plugin LTCGenerator")
add_subdirectory(plugins/LTCGenerator)
message(STATUS "Configure plugin meters")
add_subdirectory(plugins/meters)
message(STATUS "Configure plugin noise")
add_subdirectory(plugins/noiseGenerator)
message(STATUS "Configure plugin peakcount")
add_subdirectory(plugins/peak\ count)
message(STATUS "Configure plugin peaklog")
add_subdirectory(plugins/peak\ log)
message(STATUS "Configure plugin polarscope")
add_subdirectory(plugins/polarscope)
message(STATUS "Configure plugin ptp")
add_subdirectory(plugins/ptp)
message(STATUS "Configure plugin r128")
add_subdirectory(plugins/r128)
message(STATUS "Configure plugin radar")
add_subdirectory(plugins/radar)
message(STATUS "Configure plugin record")
add_subdirectory(plugins/record)
message(STATUS "Configure plugin scope")
add_subdirectory(plugins/scope)
message(STATUS "Configure plugin spectogram")
add_subdirectory(plugins/spectogram)
message(STATUS "Configure plugin waveform")
add_subdirectory(plugins/waveform)
message(STATUS "Configure plugin fftdiff")
add_subdirectory(plugins/fftdiff)
message(STATUS "Configure plugin correlation")
add_subdirectory(plugins/correlation)
message(STATUS "Configure pophub")
add_subdirectory(plugins/pophub)
#Add new plugin projects above this line

message(STATUS "Configure pam2")
add_subdirectory(pam2)

message(STATUS "Configure pamupdatemanager")
add_subdirectory(pamupdatemanager)
message(STATUS "Configure InitialSetup")
add_subdirectory(InitialSetup)
add_subdirectory(dosetup)


include(${CMAKE_SOURCE_DIR}/CMakeCPack.cmake)
include(CPack)
